--- a/themepacks/midnight/res/xmas.css
+++ b/themepacks/midnight/res/xmas.css
@@ -1,7 +1,7 @@
 .page_header {
-    background-image: url('/themepack/midnight/0.0.2.3/resource/xheader.png');
+    background-image: url('/themepack/midnight/0.0.2.4/resource/xheader.png') !important;
 }
 
 .page_custom_header {
-    background-image: url('/themepack/midnight/0.0.2.3/resource/xheader_custom.png');
+    background-image: url('/themepack/midnight/0.0.2.4/resource/xheader_custom.png') !important;
 }
