Страница регистрации из 2007г (#788)
* Update @layout.xml

* Update @layout.xml

* Update Register.xml

* Update Login.xml

* Update style.css

* Update en.strings

* Update ru.strings

* Update ru_old.strings

* Update ru_sov.strings

* h2 -> .header2

* h2 + header2 styling

* Update Register.xml

* Update Register.xml

* Update Login.xml

* Welcome message addiction

* трахать

* +reg-welcome

* +reg-welcome

* +reg-welcome

* +reg-welcome (mixed up that with old rus one)

* +reg-welcome

* Adding UK localization

* Delete settings.json

* На всякий и тут обновлю на id в layout

Нужно для изменения иконок при создании тем.

* Update @layout.xml

* Minor changes

* minor changes

* Fixes requested by celestora

* пепяо с табами

* пепяо с табами

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -169,7 +169,7 @@
                             </a>
 
                             <div class="floating_sidebar">
-                                <a class="minilink" href="/friends{$thisUser->getId()}">
+                                <a id="minilink-friends" class="minilink" href="/friends{$thisUser->getId()}">
                                     <object type="internal/link" n:if="$thisUser->getFollowersCount() > 0">
                                         <div class="counter">
                                             +{$thisUser->getFollowersCount()}
@@ -177,10 +177,10 @@
                                     </object>
                                     <img src="/assets/packages/static/openvk/img/friends.svg">
                                 </a>
-                                <a class="minilink" href="/albums{$thisUser->getId()}">
+                                <a id="minilink-albums" class="minilink" href="/albums{$thisUser->getId()}">
                                     <img src="/assets/packages/static/openvk/img/photos.svg">
                                 </a>
-                                <a class="minilink" href="/im">
+                                <a id="minilink-messenger" class="minilink" href="/im">
                                     <object type="internal/link" n:if="$thisUser->getUnreadMessagesCount() > 0">
                                         <div class="counter">
                                             +{$thisUser->getUnreadMessagesCount()}
@@ -188,10 +188,10 @@
                                     </object>
                                     <img src="/assets/packages/static/openvk/img/messages.svg">
                                 </a>
-                                <a class="minilink" href="/groups{$thisUser->getId()}">
+                                <a id="minilink-groups" class="minilink" href="/groups{$thisUser->getId()}">
                                     <img src="/assets/packages/static/openvk/img/groups.svg">
                                 </a>
-                                <a class="minilink" href="/notifications">
+                                <a id="minilink-notifications" class="minilink" href="/notifications">
                                     <object type="internal/link" n:if="$thisUser->getNotificationsCount() > 0">
                                         <div class="counter">
                                             +{$thisUser->getNotificationsCount()}
