--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -2071,6 +2071,7 @@ table td[width="120"] {
 .cookies-popup {
     position: fixed;
     bottom: 0;
+	left: 0;
     width: 100%;
     height: 40px;
     background: linear-gradient(#fff, #eee);
