fixed avatars in .tippy-content

--- a/Web/static/css/avatar.2.css
+++ b/Web/static/css/avatar.2.css
@@ -74,3 +74,10 @@ div.ovk-video > div > img
     object-fit: cover;
     border-radius: 100px;
 }
+
+.tippy-content > table > tbody > tr > td:nth-child(1) > img{
+    width: 54px;
+    height: 54px;
+    object-fit: cover;
+    border-radius: 100px;
+}
