--- a/Web/static/css/bsdn.css
+++ b/Web/static/css/bsdn.css
@@ -2,7 +2,7 @@
     width: 100%;
     position: relative;
     display: inline-flex;
-    font-family: sans-serif;
+    font-family: Tahoma, sans-serif;
     user-select: none;
     background-color: black;
 }
@@ -55,7 +55,7 @@
 p.bsdn_timeWrap {
     display: inline;
     margin: 0;
-    font-size: 10px;
+    font-size: 7pt;
     font-weight: bold;
 }
 
@@ -102,6 +102,12 @@ button.bsdn_playButton {
 
 .bsdn_fullScreenButton {
     cursor: pointer;
+}
+
+.bsdn_fullScreenButton > img:hover {
+	background: url("/assets/packages/static/openvk/img/bsdn/fullscreen_hover.gif");
+	object-fit: none;
+	object-position: -64px 0;
 }
 
 .bsdn_teaserWrap {
@@ -205,7 +211,8 @@ time.bsdn_timeFull {
 }
 
 .bsdn_teaserButton > img {
-    max-height: 69px;
+    max-height: 50px;
+    margin: 10px 0;
 }
 
 .bsdn_fullScreenButton > img, .bsdn_soundIcon {
