--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -218,8 +218,8 @@
                             <input id="password" type="password" name="password" required />
                             <input type="hidden" name="jReturnTo" value="{$_SERVER['REQUEST_URI']}" />
                             <input type="hidden" name="hash" value="{$csrfToken}" />
-                            <input type="submit" value="{_log_in}" class="button" style="display: inline-block;" />
-                            <a href="/reg" class="button" style="display: inline-block;">{_registration}</a><br><br>
+                            <input type="submit" value="{_log_in}" class="button" style="display: inline-block; font-family: Tahoma" />
+                            <a href="/reg"><input type="button" value="{_registration}" class="button" style="font-family: Tahoma" /></a><br><br>
                             <a href="/restore">{_forgot_password}</a>
                         </form>
                     {/ifset}
