Changing avatar like in old VK

--- a/Web/Presenters/templates/_includeCSS.xml
+++ b/Web/Presenters/templates/_includeCSS.xml
@@ -9,7 +9,7 @@
             {css "css/style.css"}
             {css "css/dialog.css"}
             {css "css/notifications.css"}
-
+            {css "css/avataredit.css"}
             {if $isXmas}
                 {css "css/xmas.css"}
             {/if}
@@ -25,7 +25,8 @@
         {css "css/style.css"}
         {css "css/dialog.css"}
         {css "css/notifications.css"}
-
+        {css "css/avataredit.css"}
+        
         {if $isXmas}
             {css "css/xmas.css"}
         {/if}
@@ -48,7 +49,7 @@
     {css "css/dialog.css"}
     {css "css/nsfw-posts.css"}
     {css "css/notifications.css"}
-
+    {css "css/avataredit.css"}
     {if $isXmas}
         {css "css/xmas.css"}
     {/if}
