--- a/Web/static/css/avataredit.css
+++ b/Web/static/css/avataredit.css
@@ -1,4 +1,4 @@
-/*avatar controls idk*/
+/*avatar controls*/
 #avatarEdit
 {
     position: relative;
@@ -17,6 +17,12 @@
 {
     opacity:0;
 }
+#avatarChange, #_avatarDelete, #groupAvatarChange {
+    -webkit-transition: all 200ms ease-in-out;
+    -moz-transition: all 200ms ease-in-out;
+    -o-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
+}
 #avatarChange
 {
     position:absolute;
@@ -28,6 +34,10 @@
     padding-bottom:10px;
     opacity:0%;
 }
+div#avatarAll:hover #avatarChange {
+    opacity: 1 !important;
+    visibility: visible;
+}
 #uploadIcon
 {
     position:absolute;
@@ -38,11 +48,20 @@
 {
     color:#B2B2B2;
 }
+#_newPicture:hover
+{
+    color: #D9D9D9;
+}
 .newpict
 {
     position:absolute;
-    margin-left:0;
-    margin-right:0;
+    text-align:center;
+    left:20%;
+    top:75%;
+}
+.newpict:hover
+{
+    color:#5680a0;
 }
 #groupAvatarChange
 {
@@ -60,4 +79,8 @@
     position:absolute;
     left:0;
     margin-left:20px;
+}
+#_newAvatarPicture:hover
+{
+    color:#D9D9D9;
 }
