--- a/Web/Presenters/templates/_includeCSS.xml
+++ b/Web/Presenters/templates/_includeCSS.xml
@@ -5,8 +5,8 @@
 
     {if $theme !== NULL}
         {if $theme->inheritDefault()}
+            {css "css/main.css"}
             {css "css/bsdn.css"}
-            {css "css/style.css"}
             {css "css/dialog.css"}
             {css "css/notifications.css"}
 
@@ -21,8 +21,8 @@
             <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/resource/xmas.css" />
         {/if}
     {else}
+        {css "css/main.css"}
         {css "css/bsdn.css"}
-        {css "css/style.css"}
         {css "css/dialog.css"}
         {css "css/notifications.css"}
 
@@ -43,8 +43,8 @@
         {css "css/microblog.css"}
     {/if}
 {else}
+    {css "css/main.css"}
     {css "css/bsdn.css"}
-    {css "css/style.css"}
     {css "css/dialog.css"}
     {css "css/nsfw-posts.css"}
     {css "css/notifications.css"}
