--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -88,8 +88,8 @@
                             <div class="link dec">
                                 <a href="/logout?hash={urlencode($csrfToken)}">{_header_log_out}</a>
                             </div>
-                            <div class="link">
-                                {var $atSearch = str_contains($_SERVER['REQUEST_URI'], "/search")}
+                            {var $atSearch = str_contains($_SERVER['REQUEST_URI'], "/search")}
+                            <div class="{if $atSearch}nodivider{else}link{/if}">
 
                                 {if !$atSearch}
                                     <form action="/search" method="get" id="searcher">
@@ -105,7 +105,7 @@
                                     </form>
                                 {else}
                                     <form action="/search" method="get" id="searcher">
-                                        <input id="searchInput" value="{$_GET['query'] ?? ''}" type="search" class="sr" name="query" placeholder="{_header_search}" style="height: 20px;background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 4px; background-color: #fff; padding-left: 18px;width: 548px;" title="{_header_search} [Alt+Shift+F]" accesskey="f" />
+                                        <input id="searchInput" value="{$_GET['query'] ?? ''}" type="search" class="sr" name="query" placeholder="{_header_search}" style="height: 20px;background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 4px; background-color: #fff; padding-left: 18px;width: 555px;" title="{_header_search} [Alt+Shift+F]" accesskey="f" />
                                         <select name="type" class="whatFind">
                                             <option value="users"    {if str_contains($_SERVER['REQUEST_URI'], "type=users")}selected{/if}>{_s_by_people}</option>
                                             <option value="groups"   {if str_contains($_SERVER['REQUEST_URI'], "type=groups")}selected{/if}>{_s_by_groups}</option>
