Small improvements no.2
Поиск теперь нормально выглядит на других темах
При поиске по группам отображается количество участников там
Костыль с пропуском постов возвращён но немного изменён
Добавлен костыль к комментариям чтобы не показывались комменты с удалённых постов и не было бага как в вепуровке
Добавлены ключи в советском и имперском языке для моих прошлых пуллов (ну и этого конечно)

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2313,7 +2313,6 @@ a.poll-retract-vote {
 .searchOptions
 {
     overflow-y: hidden;
-    background:#F7F7F7;
     overflow-x:hidden;
     width:28.8%;
     border-top:1px solid #E5E7E6;
@@ -2458,4 +2457,9 @@ a.poll-retract-vote {
 .searchOptionBlock input[type=text], input[type=date]
 {
     margin-bottom:5px;
+}
+
+.borderup
+{
+    border-top:1px solid #E5E7E6;
 }
