OpenVK Midnight: Change the example backdrop image

--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -137,11 +137,11 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 }
 
 .content_title_expanded {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/flex_arrow_open.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/flex_arrow_open.png") !important;
 }
 
 .content_title_unexpanded {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/flex_arrow_shut.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/flex_arrow_shut.gif") !important;
 }
 
 .ovk-video > .preview, .video-preview {
@@ -163,17 +163,17 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 
 .page_yellowheader {
     color: #c6d2e8;
-    background-image: url("/themepack/midnight/0.0.2.5/resource/header_purple.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/header_purple.png") !important;
     background-color: #231f34;
     border-color: #231f34;
 }
 
 .page_header {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/header.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/header.png") !important;
 }
 
 .page_custom_header {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/header_custom.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/header_custom.png") !important;
 }
 
 .page_yellowheader span, .page_yellowheader a {
@@ -193,11 +193,11 @@ form[action="/search"] > input, .header_search_input, textarea, input[type="text
 }
 
 input[type="checkbox"] {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/checkbox.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/checkbox.png") !important;
 }
 
 input[type="radio"] {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/radio.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/radio.png") !important;
 }
 
 .header_navigation .link {
@@ -205,23 +205,28 @@ input[type="radio"] {
 }
 
 .heart {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/like.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/like.gif") !important;
 }
 
 .pinned-mark, .post-author .pin {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/pin.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/pin.png") !important;
 }
 
 .repost-icon {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/published.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/published.gif") !important;
 }
 
 .post-author .delete {
-    background-image: url("/themepack/midnight/0.0.2.5/resource/input_clear.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.6/resource/input_clear.gif") !important;
 }
 
 .user-alert {
     background-color: #41311a;
     color: #d5b88c;
     border-color: #514534;
+}
+
+#backdropEditor {
+    background-image: url("/themepack/midnight/0.0.2.6/resource/backdrop-editor.gif") !important;
+    border-color: #473e66 !important;
 }
